Adicionando Thema dark

--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
 <body class="index-page">
 
   <header id="header" class="header d-flex align-items-center fixed-top">
+    
+    <button id="theme-toggle" aria-label="Alternar modo claro/escuro">
+      <span id="theme-icon">☀️</span>
+    </button>
+
     <div class="container-fluid position-relative d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center">
